# breadpaper

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  bakery.toml
.forgejo/workflows/: beta-release.yml  dev-release.yml  mirror.yml  package.yml  release.yml
.github/workflows/: ci.yml  release.yml
packaging/arch/: PKGBUILD
src/: lib.rs  main.rs  pywal.rs  theme.rs  wallpaper.rs
