[package]
name = "breadpaper"
version = "0.1.10"
edition = "2024"
description = "Wallpaper manager for the bread desktop"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# TODO(owner): switch to tag-pinned git dependency once bread-utils is merged and tagged, matching the bread-theme pattern
bread-utils = { path = "../bread-ecosystem-fix-worktree/bread-utils" }
