[package]
name = "breadpaper"
version = "0.1.11"
edition = "2024"
description = "Wallpaper manager for the bread desktop"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
bread-utils = { git = "https://git.breadway.dev/Breadway/bread-ecosystem", tag = "v0.3.0" }
